# diffusion-slice-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: file.rs  graphics.rs  inputs.rs  main.rs  slicer.rs
src/graphics/: client.rs  macros.rs  parameters.rs  pipeline.rs  resources.rs  workload.rs
src/graphics/pipeline/: resampling.rs  state.rs
src/graphics/pipeline/shaders/: resampling.wgsl  streamline.wgsl
src/graphics/resources/: binding.rs  buffer.rs  coloring.rs  fibers.rs  texture.rs  vertex.rs
src/graphics/resources/bind/: group.rs  layout.rs
src/graphics/workload/: render.rs  save.rs  transfer.rs
